--- a/PInvoke/BITS/Vanara.PInvoke.BITS.csproj
+++ b/PInvoke/BITS/Vanara.PInvoke.BITS.csproj
@@ -14,10 +14,10 @@
     <PackageReleaseNotes>Currently implements:
 
 Structures
-BG_AUTH_CREDENTIALS, BG_FILE_INFO, BG_FILE_PROGRESS, BG_FILE_RANGE, BG_JOB_PROGRESS, BG_JOB_REPLY_PROGRESS, BG_JOB_TIMES, BITS_FILE_PROPERTY_VALUE, BITS_JOB_PROPERTY_VALUE, BG_AUTH_CREDENTIALS_UNION, BG_BASIC_CREDENTIALS
+BG_AUTH_CREDENTIALS BG_AUTH_CREDENTIALS_UNION BG_BASIC_CREDENTIALS BG_FILE_INFO BG_FILE_PROGRESS BG_FILE_RANGE BG_JOB_PROGRESS BG_JOB_REPLY_PROGRESS BG_JOB_TIMES BITS_FILE_PROPERTY_VALUE BITS_JOB_PROPERTY_VALUE
 
 Interfaces
-IBackgroundCopyCallback, IBackgroundCopyCallback2, IBackgroundCopyCallback3, IBackgroundCopyError, IBackgroundCopyFile, IBackgroundCopyFile2, IBackgroundCopyFile3, IBackgroundCopyFile4, IBackgroundCopyFile5, IBackgroundCopyFile6, IBackgroundCopyJob, IBackgroundCopyJob2, IBackgroundCopyJob3, IBackgroundCopyJob4, IBackgroundCopyJob5, IBackgroundCopyJobHttpOptions, IBackgroundCopyManager, IBitsPeer, IBitsPeerCacheAdministration, IBitsPeerCacheRecord, IBitsTokenOptions, IEnumBackgroundCopyFiles, IEnumBackgroundCopyJobs, IEnumBitsPeerCacheRecords, IEnumBitsPeers
+IBackgroundCopyCallback IBackgroundCopyCallback2 IBackgroundCopyCallback3 IBackgroundCopyError IBackgroundCopyFile IBackgroundCopyFile2 IBackgroundCopyFile3 IBackgroundCopyFile4 IBackgroundCopyFile5 IBackgroundCopyFile6 IBackgroundCopyJob IBackgroundCopyJob2 IBackgroundCopyJob3 IBackgroundCopyJob4 IBackgroundCopyJob5 IBackgroundCopyJobHttpOptions IBackgroundCopyManager IBitsPeer IBitsPeerCacheAdministration IBitsPeerCacheRecord IBitsTokenOptions IEnumBackgroundCopyFiles IEnumBackgroundCopyJobs IEnumBitsPeerCacheRecords IEnumBitsPeers
 
 </PackageReleaseNotes>
   </PropertyGroup>
