--- a/PInvoke/CredUI/Vanara.PInvoke.CredUI.csproj
+++ b/PInvoke/CredUI/Vanara.PInvoke.CredUI.csproj
@@ -14,10 +14,10 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-CredPackAuthenticationBuffer, CredUICmdLinePromptForCredentials, CredUIConfirmCredentials, CredUIParseUserName, CredUIPromptForCredentials, CredUIPromptForWindowsCredentials, CredUIReadSSOCred, CredUIStoreSSOCred, CredUnPackAuthenticationBuffer, SspiGetCredUIContext, SspiIsPromptingNeeded, SspiPromptForCredentials, SspiUnmarshalCredUIContext, SspiUpdateCredentials
+CredPackAuthenticationBuffer CredUICmdLinePromptForCredentials CredUIConfirmCredentials CredUIParseUserName CredUIPromptForCredentials CredUIPromptForWindowsCredentials CredUIReadSSOCred CredUIStoreSSOCred CredUnPackAuthenticationBuffer SspiGetCredUIContext SspiIsPromptingNeeded SspiPromptForCredentials SspiUnmarshalCredUIContext SspiUpdateCredentials
 
 Structures
-PSEC_WINNT_CREDUI_CONTEXT, PSEC_WINNT_CREDUI_CONTEXT_VECTOR, CREDUI_INFO
+CREDUI_INFO PSEC_WINNT_CREDUI_CONTEXT PSEC_WINNT_CREDUI_CONTEXT_VECTOR
 
 </PackageReleaseNotes>
   </PropertyGroup>
