--- a/PInvoke/FirewallApi/Vanara.PInvoke.FirewallApi.vbproj
+++ b/PInvoke/FirewallApi/Vanara.PInvoke.FirewallApi.vbproj
@@ -14,13 +14,13 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-NetworkIsolationDiagnoseConnectFailureAndGetInfo, NetworkIsolationEnumAppContainers, NetworkIsolationEnumerateAppContainerRules, NetworkIsolationFreeAppContainers, NetworkIsolationGetAppContainerConfig, NetworkIsolationGetEnterpriseIdAsync, NetworkIsolationGetEnterpriseIdClose, NetworkIsolationRegisterForAppContainerChanges, NetworkIsolationSetAppContainerConfig, NetworkIsolationSetupAppContainerBinaries, NetworkIsolationUnregisterForAppContainerChanges
+NetworkIsolationDiagnoseConnectFailureAndGetInfo NetworkIsolationEnumAppContainers NetworkIsolationEnumerateAppContainerRules NetworkIsolationFreeAppContainers NetworkIsolationGetAppContainerConfig NetworkIsolationGetEnterpriseIdAsync NetworkIsolationGetEnterpriseIdClose NetworkIsolationRegisterForAppContainerChanges NetworkIsolationSetAppContainerConfig NetworkIsolationSetupAppContainerBinaries NetworkIsolationUnregisterForAppContainerChanges
 
 Structures
-INET_FIREWALL_AC_BINARIES, INET_FIREWALL_AC_CHANGE, INET_FIREWALL_AC_CAPABILITIES, INET_FIREWALL_APP_CONTAINER, UNIONType
+INET_FIREWALL_AC_BINARIES INET_FIREWALL_AC_CAPABILITIES INET_FIREWALL_AC_CHANGE INET_FIREWALL_APP_CONTAINER UNIONType
 
 Interfaces
-INetFwAuthorizedApplication, INetFwAuthorizedApplications, INetFwIcmpSettings, INetFwMgr, INetFwOpenPort, INetFwOpenPorts, INetFwPolicy, INetFwPolicy2, INetFwProduct, INetFwProducts, INetFwProfile, INetFwRemoteAdminSettings, INetFwRule, INetFwRule2, INetFwRule3, INetFwRules, INetFwService, INetFwServiceRestriction, INetFwServices
+INetFwAuthorizedApplication INetFwAuthorizedApplications INetFwIcmpSettings INetFwMgr INetFwOpenPort INetFwOpenPorts INetFwPolicy INetFwPolicy2 INetFwProduct INetFwProducts INetFwProfile INetFwRemoteAdminSettings INetFwRule INetFwRule2 INetFwRule3 INetFwRules INetFwService INetFwServiceRestriction INetFwServices
 
 </PackageReleaseNotes>
   </PropertyGroup>
