--- a/PInvoke/KtmW32/Vanara.PInvoke.KtmW32.csproj
+++ b/PInvoke/KtmW32/Vanara.PInvoke.KtmW32.csproj
@@ -14,10 +14,10 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-CommitComplete, CommitEnlistment, CommitTransaction, CommitTransactionAsync, CreateEnlistment, CreateResourceManager, CreateTransaction, CreateTransactionManager, GetCurrentClockTransactionManager, GetEnlistmentId, GetEnlistmentRecoveryInformation, GetNotificationResourceManager, GetNotificationResourceManagerAsync, GetTransactionId, GetTransactionInformation, GetTransactionManagerId, OpenEnlistment, OpenResourceManager, OpenTransaction, OpenTransactionManager, OpenTransactionManagerById, PrepareComplete, PrepareEnlistment, PrePrepareComplete, PrePrepareEnlistment, ReadOnlyEnlistment, RecoverEnlistment, RecoverResourceManager, RecoverTransactionManager, RenameTransactionManager, RollbackComplete, RollbackEnlistment, RollbackTransaction, RollbackTransactionAsync, RollforwardTransactionManager, SetEnlistmentRecoveryInformation, SetResourceManagerCompletionPort, SetTransactionInformation, SinglePhaseReject
+CommitComplete CommitEnlistment CommitTransaction CommitTransactionAsync CreateEnlistment CreateResourceManager CreateTransaction CreateTransactionManager GetCurrentClockTransactionManager GetEnlistmentId GetEnlistmentRecoveryInformation GetNotificationResourceManager GetNotificationResourceManagerAsync GetTransactionId GetTransactionInformation GetTransactionManagerId OpenEnlistment OpenResourceManager OpenTransaction OpenTransactionManager OpenTransactionManagerById PrepareComplete PrepareEnlistment PrePrepareComplete PrePrepareEnlistment ReadOnlyEnlistment RecoverEnlistment RecoverResourceManager RecoverTransactionManager RenameTransactionManager RollbackComplete RollbackEnlistment RollbackTransaction RollbackTransactionAsync RollforwardTransactionManager SetEnlistmentRecoveryInformation SetResourceManagerCompletionPort SetTransactionInformation SinglePhaseReject
 
 Structures
-HENLISTMENT, HRESMGR, HTRXNMGR, TRANSACTION_NOTIFICATION, TRANSACTION_NOTIFICATION_RECOVERY_ARGUMENT
+HENLISTMENT HRESMGR HTRXNMGR TRANSACTION_NOTIFICATION TRANSACTION_NOTIFICATION_RECOVERY_ARGUMENT
 
 </PackageReleaseNotes>
   </PropertyGroup>
