--- a/PInvoke/OleDlg/Vanara.PInvoke.OleDlg.csproj
+++ b/PInvoke/OleDlg/Vanara.PInvoke.OleDlg.csproj
@@ -13,10 +13,10 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-OleUIAddVerbMenu, OleUIBusy, OleUICanConvertOrActivateAs, OleUIChangeIcon, OleUIChangeSource, OleUIConvert, OleUIEditLinks, OleUIInsertObject, OleUIObjectProperties, OleUIPasteSpecial, OleUIPromptUser, OleUIUpdateLinks
+OleUIAddVerbMenu OleUIBusy OleUICanConvertOrActivateAs OleUIChangeIcon OleUIChangeSource OleUIConvert OleUIEditLinks OleUIInsertObject OleUIObjectProperties OleUIPasteSpecial OleUIPromptUser OleUIUpdateLinks
 
 Structures
-OLEUIBUSY, OLEUICHANGEICON, OLEUICHANGESOURCE, OLEUICONVERT, OLEUIEDITLINKS, OLEUIGNRLPROPS, OLEUIINSERTOBJECT, OLEUILINKPROPS, OLEUIOBJECTPROPS, OLEUIPASTEENTRY, OLEUIPASTESPECIAL, OLEUIVIEWPROPS
+OLEUIBUSY OLEUICHANGEICON OLEUICHANGESOURCE OLEUICONVERT OLEUIEDITLINKS OLEUIGNRLPROPS OLEUIINSERTOBJECT OLEUILINKPROPS OLEUIOBJECTPROPS OLEUIPASTEENTRY OLEUIPASTESPECIAL OLEUIVIEWPROPS
 
 Interfaces
 IOleUILinkContainer
