--- a/PInvoke/Opc/Vanara.PInvoke.Opc.csproj
+++ b/PInvoke/Opc/Vanara.PInvoke.Opc.csproj
@@ -14,7 +14,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Interfaces
-IOpcCertificateEnumerator, IOpcCertificateSet, IOpcDigitalSignature, IOpcDigitalSignatureEnumerator, IOpcDigitalSignatureManager, IOpcFactory, IOpcPackage, IOpcPart, IOpcPartEnumerator, IOpcPartSet, IOpcPartUri, IOpcRelationship, IOpcRelationshipEnumerator, IOpcRelationshipSelector, IOpcRelationshipSelectorEnumerator, IOpcRelationshipSelectorSet, IOpcRelationshipSet, IOpcSignatureCustomObject, IOpcSignatureCustomObjectEnumerator, IOpcSignatureCustomObjectSet, IOpcSignaturePartReference, IOpcSignaturePartReferenceEnumerator, IOpcSignaturePartReferenceSet, IOpcSignatureReference, IOpcSignatureReferenceEnumerator, IOpcSignatureReferenceSet, IOpcSignatureRelationshipReference, IOpcSignatureRelationshipReferenceEnumerator, IOpcSignatureRelationshipReferenceSet, IOpcSigningOptions, IOpcUri
+IOpcCertificateEnumerator IOpcCertificateSet IOpcDigitalSignature IOpcDigitalSignatureEnumerator IOpcDigitalSignatureManager IOpcFactory IOpcPackage IOpcPart IOpcPartEnumerator IOpcPartSet IOpcPartUri IOpcRelationship IOpcRelationshipEnumerator IOpcRelationshipSelector IOpcRelationshipSelectorEnumerator IOpcRelationshipSelectorSet IOpcRelationshipSet IOpcSignatureCustomObject IOpcSignatureCustomObjectEnumerator IOpcSignatureCustomObjectSet IOpcSignaturePartReference IOpcSignaturePartReferenceEnumerator IOpcSignaturePartReferenceSet IOpcSignatureReference IOpcSignatureReferenceEnumerator IOpcSignatureReferenceSet IOpcSignatureRelationshipReference IOpcSignatureRelationshipReferenceEnumerator IOpcSignatureRelationshipReferenceSet IOpcSigningOptions IOpcUri
 
 </PackageReleaseNotes>
   </PropertyGroup>
