--- a/PInvoke/PeerDist/Vanara.PInvoke.PeerDist.csproj
+++ b/PInvoke/PeerDist/Vanara.PInvoke.PeerDist.csproj
@@ -13,10 +13,10 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-PeerDistClientAddContentInformation, PeerDistClientAddData, PeerDistClientBlockRead, PeerDistClientCancelAsyncOperation, PeerDistClientCloseContent, PeerDistClientCompleteContentInformation, PeerDistClientFlushContent, PeerDistClientGetInformationByHandle, PeerDistClientOpenContent, PeerDistClientStreamRead, PeerDistGetOverlappedResult, PeerDistGetStatus, PeerDistGetStatusEx, PeerDistRegisterForStatusChangeNotification, PeerDistRegisterForStatusChangeNotificationEx, PeerDistServerCancelAsyncOperation, PeerDistServerCloseContentInformation, PeerDistServerCloseStreamHandle, PeerDistServerOpenContentInformation, PeerDistServerOpenContentInformationEx, PeerDistServerPublishAddToStream, PeerDistServerPublishCompleteStream, PeerDistServerPublishStream, PeerDistServerRetrieveContentInformation, PeerDistServerUnpublish, PeerDistShutdown, PeerDistStartup, PeerDistUnregisterForStatusChangeNotification
+PeerDistClientAddContentInformation PeerDistClientAddData PeerDistClientBlockRead PeerDistClientCancelAsyncOperation PeerDistClientCloseContent PeerDistClientCompleteContentInformation PeerDistClientFlushContent PeerDistClientGetInformationByHandle PeerDistClientOpenContent PeerDistClientStreamRead PeerDistGetOverlappedResult PeerDistGetStatus PeerDistGetStatusEx PeerDistRegisterForStatusChangeNotification PeerDistRegisterForStatusChangeNotificationEx PeerDistServerCancelAsyncOperation PeerDistServerCloseContentInformation PeerDistServerCloseStreamHandle PeerDistServerOpenContentInformation PeerDistServerOpenContentInformationEx PeerDistServerPublishAddToStream PeerDistServerPublishCompleteStream PeerDistServerPublishStream PeerDistServerRetrieveContentInformation PeerDistServerUnpublish PeerDistShutdown PeerDistStartup PeerDistUnregisterForStatusChangeNotification
 
 Structures
-PEERDIST_CLIENT_BASIC_INFO, PEERDIST_CONTENT_HANDLE, PEERDIST_CONTENT_TAG, PEERDIST_CONTENTINFO_HANDLE, PEERDIST_INSTANCE_HANDLE, PEERDIST_PUBLICATION_OPTIONS, PEERDIST_RETRIEVAL_OPTIONS, PEERDIST_STATUS_INFO, PEERDIST_STREAM_HANDLE
+PEERDIST_CLIENT_BASIC_INFO PEERDIST_CONTENTINFO_HANDLE PEERDIST_CONTENT_HANDLE PEERDIST_CONTENT_TAG PEERDIST_INSTANCE_HANDLE PEERDIST_PUBLICATION_OPTIONS PEERDIST_RETRIEVAL_OPTIONS PEERDIST_STATUS_INFO PEERDIST_STREAM_HANDLE
 
 </PackageReleaseNotes>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
