--- a/PInvoke/ProjectedFSLib/Vanara.PInvoke.ProjectedFSLib.csproj
+++ b/PInvoke/ProjectedFSLib/Vanara.PInvoke.ProjectedFSLib.csproj
@@ -14,10 +14,10 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-PrjAllocateAlignedBuffer, PrjClearNegativePathCache, PrjCompleteCommand, PrjDeleteFile, PrjDoesNameContainWildCards, PrjFileNameCompare, PrjFileNameMatch, PrjFillDirEntryBuffer, PrjFillDirEntryBuffer2, PrjFreeAlignedBuffer, PrjGetOnDiskFileState, PrjGetVirtualizationInstanceInfo, PrjMarkDirectoryAsPlaceholder, PrjStartVirtualizing, PrjStopVirtualizing, PrjUpdateFileIfNeeded, PrjWriteFileData, PrjWritePlaceholderInfo, PrjWritePlaceholderInfo2
+PrjAllocateAlignedBuffer PrjClearNegativePathCache PrjCompleteCommand PrjDeleteFile PrjDoesNameContainWildCards PrjFileNameCompare PrjFileNameMatch PrjFillDirEntryBuffer PrjFillDirEntryBuffer2 PrjFreeAlignedBuffer PrjGetOnDiskFileState PrjGetVirtualizationInstanceInfo PrjMarkDirectoryAsPlaceholder PrjStartVirtualizing PrjStopVirtualizing PrjUpdateFileIfNeeded PrjWriteFileData PrjWritePlaceholderInfo PrjWritePlaceholderInfo2
 
 Structures
-PRJ_CALLBACK_DATA, PRJ_CALLBACKS, PRJ_COMPLETE_COMMAND_EXTENDED_PARAMETERS, PRJ_DIR_ENTRY_BUFFER_HANDLE, PRJ_EXTENDED_INFO, PRJ_FILE_BASIC_INFO, PRJ_NAMESPACE_VIRTUALIZATION_CONTEXT, PRJ_NOTIFICATION_MAPPING, PRJ_NOTIFICATION_PARAMETERS, PRJ_PLACEHOLDER_INFO, PRJ_PLACEHOLDER_VERSION_INFO, PRJ_STARTVIRTUALIZING_OPTIONS, PRJ_VIRTUALIZATION_INSTANCE_INFO, SYMLINK, EAINFORMATION, SECURITYINFORMATION, STREAMSINFORMATION
+EAINFORMATION PRJ_CALLBACKS PRJ_CALLBACK_DATA PRJ_COMPLETE_COMMAND_EXTENDED_PARAMETERS PRJ_DIR_ENTRY_BUFFER_HANDLE PRJ_EXTENDED_INFO PRJ_FILE_BASIC_INFO PRJ_NAMESPACE_VIRTUALIZATION_CONTEXT PRJ_NOTIFICATION_MAPPING PRJ_NOTIFICATION_PARAMETERS PRJ_PLACEHOLDER_INFO PRJ_PLACEHOLDER_VERSION_INFO PRJ_STARTVIRTUALIZING_OPTIONS PRJ_VIRTUALIZATION_INSTANCE_INFO SECURITYINFORMATION STREAMSINFORMATION SYMLINK
 
 </PackageReleaseNotes>
   </PropertyGroup>
