--- a/PInvoke/SHCore/Vanara.PInvoke.SHCore.csproj
+++ b/PInvoke/SHCore/Vanara.PInvoke.SHCore.csproj
@@ -13,7 +13,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-GetDpiForMonitor, GetDpiForShellUIComponent, GetProcessDpiAwareness, GetScaleFactorForDevice, GetScaleFactorForMonitor, RegisterScaleChangeEvent, RegisterScaleChangeNotifications, RevokeScaleChangeNotifications, SetProcessDpiAwareness, UnregisterScaleChangeEvent
+GetDpiForMonitor GetDpiForShellUIComponent GetProcessDpiAwareness GetScaleFactorForDevice GetScaleFactorForMonitor RegisterScaleChangeEvent RegisterScaleChangeNotifications RevokeScaleChangeNotifications SetProcessDpiAwareness UnregisterScaleChangeEvent
 
 </PackageReleaseNotes>
   </PropertyGroup>
