--- a/PInvoke/UrlMon/Vanara.PInvoke.UrlMon.csproj
+++ b/PInvoke/UrlMon/Vanara.PInvoke.UrlMon.csproj
@@ -14,13 +14,13 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-AsyncInstallDistributionUnit, CoGetClassObjectFromURL, CoInternetCombineIUri, CoInternetCombineUrl, CoInternetCombineUrlEx, CoInternetCompareUrl, CoInternetGetSession, CoInternetParseIUri, CoInternetParseUrl, CoInternetQueryInfo, CompareSecurityIds, CompatFlagsFromClsid, CopyBindInfo, CopyStgMedium, CreateAsyncBindCtx, CreateAsyncBindCtxEx, CreateFormatEnumerator, CreateIUriBuilder, CreateUri, CreateUriFromMultiByteString, CreateUriWithFragment, CreateURLMoniker, CreateURLMonikerEx, CreateURLMonikerEx2, FaultInIEFeature, FindMediaType, FindMediaTypeClass, FindMimeFromData, GetClassFileOrMime, GetComponentIDFromCLSSPEC, IEInstallScope, IsAsyncMoniker, IsValidURL, MkParseDisplayNameEx, ObtainUserAgentString, RegisterBindStatusCallback, RegisterFormatEnumerator, RegisterMediaTypeClass, RegisterMediaTypes, ReleaseBindInfo, RevokeBindStatusCallback, RevokeFormatEnumerator, URLDownloadToCacheFile, URLDownloadToFile, UrlMkGetSessionOption, UrlMkSetSessionOption, URLOpenBlockingStream, URLOpenPullStream, URLOpenStream
+AsyncInstallDistributionUnit CoGetClassObjectFromURL CoInternetCombineIUri CoInternetCombineUrl CoInternetCombineUrlEx CoInternetCompareUrl CoInternetGetSession CoInternetParseIUri CoInternetParseUrl CoInternetQueryInfo CompareSecurityIds CompatFlagsFromClsid CopyBindInfo CopyStgMedium CreateAsyncBindCtx CreateAsyncBindCtxEx CreateFormatEnumerator CreateIUriBuilder CreateUri CreateUriFromMultiByteString CreateUriWithFragment CreateURLMoniker CreateURLMonikerEx CreateURLMonikerEx2 FaultInIEFeature FindMediaType FindMediaTypeClass FindMimeFromData GetClassFileOrMime GetComponentIDFromCLSSPEC IEInstallScope IsAsyncMoniker IsValidURL MkParseDisplayNameEx ObtainUserAgentString RegisterBindStatusCallback RegisterFormatEnumerator RegisterMediaTypeClass RegisterMediaTypes ReleaseBindInfo RevokeBindStatusCallback RevokeFormatEnumerator URLDownloadToCacheFile URLDownloadToFile UrlMkGetSessionOption UrlMkSetSessionOption URLOpenBlockingStream URLOpenPullStream URLOpenStream
 
 Structures
 BINDINFO
 
 Interfaces
-IBinding, IBindStatusCallback, IInternetSession, IUri, IUriBuilder
+IBinding IBindStatusCallback IInternetSession IUri IUriBuilder
 
 </PackageReleaseNotes>
   </PropertyGroup>
