--- a/PInvoke/UserEnv/Vanara.PInvoke.UserEnv.csproj
+++ b/PInvoke/UserEnv/Vanara.PInvoke.UserEnv.csproj
@@ -14,10 +14,10 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-CreateAppContainerProfile, CreateEnvironmentBlock, CreateProfile, DeleteAppContainerProfile, DeleteProfile, DeriveAppContainerSidFromAppContainerName, DestroyEnvironmentBlock, EnterCriticalPolicySection, ExpandEnvironmentStringsForUserA, ExpandEnvironmentStringsForUserW, FreeGPOList, GetAllUsersProfileDirectory, GetAppContainerFolderPath, GetAppContainerRegistryLocation, GetAppliedGPOList, GetDefaultUserProfileDirectory, GetGPOListA, GetGPOListW, GetProfilesDirectory, GetProfileType, GetUserProfileDirectoryA, GetUserProfileDirectoryW, LeaveCriticalPolicySection, LoadUserProfile, RefreshPolicy, RefreshPolicyEx, RegisterGPNotification, UnloadUserProfile, UnregisterGPNotification
+CreateAppContainerProfile CreateEnvironmentBlock CreateProfile DeleteAppContainerProfile DeleteProfile DeriveAppContainerSidFromAppContainerName DestroyEnvironmentBlock EnterCriticalPolicySection ExpandEnvironmentStringsForUserA ExpandEnvironmentStringsForUserW FreeGPOList GetAllUsersProfileDirectory GetAppContainerFolderPath GetAppContainerRegistryLocation GetAppliedGPOList GetDefaultUserProfileDirectory GetGPOListA GetGPOListW GetProfilesDirectory GetProfileType GetUserProfileDirectoryA GetUserProfileDirectoryW LeaveCriticalPolicySection LoadUserProfile RefreshPolicy RefreshPolicyEx RegisterGPNotification UnloadUserProfile UnregisterGPNotification
 
 Structures
-GROUP_POLICY_OBJECT, PROFILEINFO
+GROUP_POLICY_OBJECT PROFILEINFO
 
 </PackageReleaseNotes>
   </PropertyGroup>
