--- a/PInvoke/SearchApi/Vanara.PInvoke.SearchApi.csproj
+++ b/PInvoke/SearchApi/Vanara.PInvoke.SearchApi.csproj
@@ -14,10 +14,10 @@
     <PackageReleaseNotes>Currently implements:
 
 Structures
-AUTHENTICATION_INFO, FILTERED_DATA_SOURCES, FILTERREGION, FULLPROPSPEC, INCREMENTAL_ACCESS_INFO, ITEM_INFO, PROXY_INFO, SEARCH_COLUMN_PROPERTIES, SEARCH_ITEM_CHANGE, SEARCH_ITEM_INDEXING_STATUS, SEARCH_ITEM_PERSISTENT_CHANGE, STAT_CHUNK, TIMEOUT_INFO
+AUTHENTICATION_INFO FILTERED_DATA_SOURCES FILTERREGION FULLPROPSPEC INCREMENTAL_ACCESS_INFO ITEM_INFO PROXY_INFO SEARCH_COLUMN_PROPERTIES SEARCH_ITEM_CHANGE SEARCH_ITEM_INDEXING_STATUS SEARCH_ITEM_PERSISTENT_CHANGE STAT_CHUNK TIMEOUT_INFO
 
 Interfaces
-IEnumSearchRoots, IEnumSearchScopeRules, IFilter, ILoadFilter, IOpLockStatus, IProtocolHandlerSite, IRowsetEvents, IRowsetPrioritization, ISearchCatalogManager, ISearchCatalogManager2, ISearchCrawlScopeManager, ISearchCrawlScopeManager2, ISearchItemsChangedSink, ISearchLanguageSupport, ISearchManager, ISearchManager2, ISearchNotifyInlineSite, ISearchPersistentItemsChangedSink, ISearchProtocol, ISearchProtocol2, ISearchProtocolThreadContext, ISearchQueryHelper, ISearchRoot, ISearchScopeRule, ISearchViewChangedSink, IUrlAccessor, IUrlAccessor2, IUrlAccessor3, IUrlAccessor4, IOpenSearchSource, ISearchFolderItemFactory, IConditionFactory, IConditionFactory2, IEntity, INamedEntity, IQueryParser, IQueryParserManager, IQuerySolution, IRelationship, ISchemaLocalizerSupport, ISchemaProvider, ITokenCollection, ICondition, ICondition2, IRichChunk
+ICondition ICondition2 IConditionFactory IConditionFactory2 IEntity IEnumSearchRoots IEnumSearchScopeRules IFilter ILoadFilter INamedEntity IOpenSearchSource IOpLockStatus IProtocolHandlerSite IQueryParser IQueryParserManager IQuerySolution IRelationship IRichChunk IRowsetEvents IRowsetPrioritization ISchemaLocalizerSupport ISchemaProvider ISearchCatalogManager ISearchCatalogManager2 ISearchCrawlScopeManager ISearchCrawlScopeManager2 ISearchFolderItemFactory ISearchItemsChangedSink ISearchLanguageSupport ISearchManager ISearchManager2 ISearchNotifyInlineSite ISearchPersistentItemsChangedSink ISearchProtocol ISearchProtocol2 ISearchProtocolThreadContext ISearchQueryHelper ISearchRoot ISearchScopeRule ISearchViewChangedSink ITokenCollection IUrlAccessor IUrlAccessor2 IUrlAccessor3 IUrlAccessor4
 
 </PackageReleaseNotes>
   </PropertyGroup>
