--- a/PInvoke/Version/Vanara.PInvoke.Version.csproj
+++ b/PInvoke/Version/Vanara.PInvoke.Version.csproj
@@ -13,7 +13,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-GetFileVersionInfo, GetFileVersionInfoEx, GetFileVersionInfoSize, GetFileVersionInfoSizeEx, VerFindFile, VerInstallFile, VerLanguageName, VerQueryValue
+GetFileVersionInfo GetFileVersionInfoEx GetFileVersionInfoSize GetFileVersionInfoSizeEx VerFindFile VerInstallFile VerLanguageName VerQueryValue
 
 Structures
 VS_FIXEDFILEINFO
