--- a/PInvoke/WcmApi/Vanara.PInvoke.WcmApi.csproj
+++ b/PInvoke/WcmApi/Vanara.PInvoke.WcmApi.csproj
@@ -14,10 +14,10 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-WcmFreeMemory, WcmGetProfileList, WcmQueryProperty, WcmSetProfileList, WcmSetProperty
+WcmFreeMemory WcmGetProfileList WcmQueryProperty WcmSetProfileList WcmSetProperty
 
 Structures
-WCM_BILLING_CYCLE_INFO, WCM_CONNECTION_COST_DATA, WCM_DATAPLAN_STATUS, WCM_POLICY_VALUE, WCM_PROFILE_INFO, WCM_PROFILE_INFO_LIST, WCM_TIME_INTERVAL, WCM_USAGE_DATA
+WCM_BILLING_CYCLE_INFO WCM_CONNECTION_COST_DATA WCM_DATAPLAN_STATUS WCM_POLICY_VALUE WCM_PROFILE_INFO WCM_PROFILE_INFO_LIST WCM_TIME_INTERVAL WCM_USAGE_DATA
 
 </PackageReleaseNotes>
   </PropertyGroup>
