--- a/PInvoke/FunDisc/Vanara.PInvoke.FunDisc.csproj
+++ b/PInvoke/FunDisc/Vanara.PInvoke.FunDisc.csproj
@@ -10,7 +10,12 @@
     <AssemblyName>Vanara.PInvoke.FunDisc</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;FunDisc;Windows Functional Discovery</PackageTags>
-    <PackageReleaseNotes/>
+    <PackageReleaseNotes>Currently implements:
+
+Interfaces
+IFunctionDiscovery IFunctionDiscoveryNotification IFunctionInstance IFunctionInstanceCollection IFunctionInstanceCollectionQuery IFunctionInstanceQuery
+
+</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
