--- a/PInvoke/WcnApi/Vanara.PInvoke.WcnApi.csproj
+++ b/PInvoke/WcnApi/Vanara.PInvoke.WcnApi.csproj
@@ -10,7 +10,15 @@
     <AssemblyName>Vanara.PInvoke.WcnApi</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;WcnApi;Windows Connect Now</PackageTags>
-    <PackageReleaseNotes/>
+    <PackageReleaseNotes>Currently implements:
+
+Structures
+WCN_VALUE_TYPE_PRIMARY_DEVICE_TYPE WCN_VENDOR_EXTENSION_SPEC
+
+Interfaces
+IWCNConnectNotify IWCNDevice
+
+</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
