--- a/Vanara.Library.nuspec
+++ b/Vanara.Library.nuspec
@@ -33,6 +33,7 @@
       <dependency id="Vanara.PInvoke.Drt" version="3.3.6" />
       <dependency id="Vanara.PInvoke.DwmApi" version="3.3.6" />
       <dependency id="Vanara.PInvoke.FirewallApi" version="3.3.6" />
+      <dependency id="Vanara.PInvoke.FunDisc" version="3.3.6" />
       <dependency id="Vanara.PInvoke.Gdi32" version="3.3.6" />
       <dependency id="Vanara.PInvoke.Graphics" version="3.3.6" />
       <dependency id="Vanara.PInvoke.IpHlpApi" version="3.3.6" />
@@ -73,6 +74,7 @@
       <dependency id="Vanara.PInvoke.Version" version="3.3.6" />
       <dependency id="Vanara.PInvoke.VirtDisk" version="3.3.6" />
       <dependency id="Vanara.PInvoke.WcmApi" version="3.3.6" />
+      <dependency id="Vanara.PInvoke.WcnApi" version="3.3.6" />
       <dependency id="Vanara.PInvoke.Wer" version="3.3.6" />
       <dependency id="Vanara.PInvoke.WinINet" version="3.3.6" />
       <dependency id="Vanara.PInvoke.WinTrust" version="3.3.6" />
