--- a/PInvoke/FirewallApi/Vanara.PInvoke.FirewallApi.vbproj
+++ b/PInvoke/FirewallApi/Vanara.PInvoke.FirewallApi.vbproj
@@ -7,7 +7,7 @@
     <Description>PInvoke API (methods, structures and constants) imported from FirewallApi.dll for Windows Firewall with Advanced Security.</Description>
     <AssemblyName>Vanara.PInvoke.FirewallApi</AssemblyName>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <TargetFrameworks>net20;net35;net40;net45;net5.0-windows;netstandard2.0;netcoreapp2.0;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net20;net35;net40;net45;net5.0;netstandard2.0;netcoreapp2.0;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
     <DocumentationFile>$(AssemblyName).xml</DocumentationFile>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;FirewallApi;windows firewall</PackageTags>
