--- a/PInvoke/Rpc/Vanara.PInvoke.Rpc.csproj
+++ b/PInvoke/Rpc/Vanara.PInvoke.Rpc.csproj
@@ -6,10 +6,11 @@
   <PropertyGroup>
     <Description>PInvoke API (methods, structures and constants) imported from Windows Rpc libraries.</Description>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <TargetFrameworks>net20;net35;net40;net45;netstandard2.0;netcoreapp2.0;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net20;net35;net40;net45;net5.0;netstandard2.0;netcoreapp2.0;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.Rpc</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;RPC;windows;remote procedure call</PackageTags>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <PackageReleaseNotes>Currently implements:
 
 Functions
