--- a/PInvoke/UserEnv/Vanara.PInvoke.UserEnv.csproj
+++ b/PInvoke/UserEnv/Vanara.PInvoke.UserEnv.csproj
@@ -6,7 +6,7 @@
   <PropertyGroup>
     <Description>PInvoke API (methods, structures and constants) imported from UserEnv.dll.</Description>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <TargetFrameworks>net20;net35;net40;net45;net5.0-windows;netstandard2.0;netcoreapp2.0;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net20;net35;net40;net45;net5.0;netstandard2.0;netcoreapp2.0;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.UserEnv</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;UserEnv</PackageTags>
