--- a/PInvoke/IMAPI/Vanara.PInvoke.IMAPI.csproj
+++ b/PInvoke/IMAPI/Vanara.PInvoke.IMAPI.csproj
@@ -10,7 +10,12 @@
     <AssemblyName>Vanara.PInvoke.IMAPI</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;IMAPI;Image Mastering</PackageTags>
-    <PackageReleaseNotes/>
+    <PackageReleaseNotes>Currently implements:
+
+Interfaces
+DDiscFormat2DataEvents DDiscFormat2EraseEvents DDiscFormat2RawCDEvents DDiscFormat2TrackAtOnceEvents DDiscMaster2Events DFileSystemImageEvents DFileSystemImageImportEvents DWriteEngine2Events IBlockRange IBlockRangeList IBootOptions IBurnVerification IDiscFormat2 IDiscFormat2Data IDiscFormat2DataEventArgs IDiscFormat2Erase IDiscFormat2RawCD IDiscFormat2RawCDEventArgs IDiscFormat2TrackAtOnce IDiscFormat2TrackAtOnceEventArgs IDiscMaster2 IDiscRecorder2 IDiscRecorder2Ex IEnumFsiItems IEnumProgressItems IFileSystemImage IFileSystemImage2 IFileSystemImage3 IFileSystemImageResult IFileSystemImageResult2 IFsiDirectoryItem IFsiDirectoryItem2 IFsiFileItem IFsiFileItem2 IFsiItem IFsiNamedStreams IIsoImageManager IMultisession IMultisessionRandomWrite IMultisessionSequential IMultisessionSequential2 IProgressItem IProgressItems IRawCDImageCreator IRawCDImageTrackInfo IWriteEngine2 IWriteEngine2EventArgs IWriteSpeedDescriptor
+
+</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
