--- a/PInvoke/CfgMgr32/Vanara.PInvoke.CfgMgr32.csproj
+++ b/PInvoke/CfgMgr32/Vanara.PInvoke.CfgMgr32.csproj
@@ -10,10 +10,12 @@
     <AssemblyName>Vanara.PInvoke.CfgMgr32</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;CfgMgr32</PackageTags>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <PackageReleaseNotes />
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
+    <ProjectReference Include="..\Security\Vanara.PInvoke.Security.csproj" />
     <ProjectReference Include="..\SetupAPI\Vanara.PInvoke.SetupAPI.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
