--- a/PInvoke/Lz32/Vanara.PInvoke.Lz32.csproj
+++ b/PInvoke/Lz32/Vanara.PInvoke.Lz32.csproj
@@ -10,7 +10,15 @@
     <AssemblyName>Vanara.PInvoke.Lz32</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;Lz32;compression</PackageTags>
-    <PackageReleaseNotes/>
+    <PackageReleaseNotes>Currently implements:
+
+Functions
+GetExpandedName LZClose LZCopy LZInit LZOpenFile LZRead LZSeek
+
+Structures
+HLZFILE
+
+</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
