--- a/PInvoke/Multimedia/Vanara.PInvoke.Multimedia.csproj
+++ b/PInvoke/Multimedia/Vanara.PInvoke.Multimedia.csproj
@@ -10,6 +10,7 @@
     <AssemblyName>Vanara.PInvoke.Multimedia</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;winmm;windows multimedia;wav;waveform;audio;msacm32;avifil32</PackageTags>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <PackageReleaseNotes />
   </PropertyGroup>
   <ItemGroup>
