--- a/Vanara.Library.nuspec
+++ b/Vanara.Library.nuspec
@@ -46,6 +46,7 @@
       <dependency id="Vanara.PInvoke.Magnification" version="3.3.10" />
       <dependency id="Vanara.PInvoke.Mpr" version="3.3.10" />
       <dependency id="Vanara.PInvoke.Msi" version="3.3.10" />
+      <dependency id="Vanara.PInvoke.Multimedia" version="3.3.10" />
       <dependency id="Vanara.PInvoke.NetApi32" version="3.3.10" />
       <dependency id="Vanara.PInvoke.NetListMgr" version="3.3.10" />
       <dependency id="Vanara.PInvoke.NewDev" version="3.3.10" />
