--- a/Windows.Forms/Vanara.Windows.Forms.csproj
+++ b/Windows.Forms/Vanara.Windows.Forms.csproj
@@ -36,6 +36,9 @@ BitmapProperty, BoolProperty, CloakingSource, CollapsiblePanelBorderCondition, C
     <None Remove="Controls\ExplorerBrowser.bmp" />
     <None Remove="Controls\ShellNamespaceTreeControl.bmp" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Theraot.Core" Version="3.2.5" Condition=" $(TargetFramework.StartsWith('net2')) Or $(TargetFramework.StartsWith('net3')) Or $(TargetFramework.StartsWith('net4')) " />
+  </ItemGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('net2')) Or $(TargetFramework.StartsWith('net3')) Or $(TargetFramework.StartsWith('net4')) ">
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
